Added Redis caching for feeds with TTL-based expiration